clang/test/BSC/Negative/Ownership/TemplateInstantiation/generic_owned_borrow_instantiation.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

// Test owned/_Borrow qualifiers on generic template instantiation
// This tests CheckInstantiatedTypeOwnedQualifiers and CheckInstantiatedTypeBorrowQualifiers

struct ClassOwned<T> {
    owned T member;   // expected-error {{type of 'int' cannot be qualified by 'owned'}}
};

void test_class_owned() {
    struct ClassOwned<int*> obj1;   // OK: int* can be owned
    struct ClassOwned<int> obj2;    // expected-note {{in instantiation of template class 'ClassOwned<int>' requested here}}
}

struct ClassBorrow<T> {
    _Borrow T member;    // expected-error 2 {{_Borrow type requires a pointer or reference ('int' is invalid)}}
};

void test_class_borrow() {
    int x;
    struct ClassBorrow<int*> obj1={&mut x};  // OK: int* can be borrowed
    struct ClassBorrow<int> obj2;   // expected-note {{in instantiation of template class 'ClassBorrow<int>' requested here}}
}

int main() {
    return 0;
}
